--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="content">
         <img src="./images/image-qr-code.png"style="width: 200px; height: 220px;"><br/><pre></pre>
         <div class="text">
-            <span><b>Improve your front-end skills by building projects</b></span><br/><pre></pre>
-            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level 
+            <span><b>SCAN THE CODE TO MAKE ORDERS</b></span><br/><pre></pre>
+            Scan the QR code to visit TRACK YOUR ORDER AND TO MAKE PAYMENT AND DELIVERY NOTE
         </div>
   </div>
   <div class="reference">
